--- a/share.yaml
+++ b/share.yaml
@@ -1,39 +1,42 @@
-    "homeTenantId": "3a15904d-3fd9-4256-a753-beb05cdf0c6d",
-    "id": "eb940d7e-b120-4388-bbe7-4bee414e415b",
-    "isDefault": false,
-    "managedByTenants": [
-      {
-        "tenantId": "2f4a9838-26b7-47ee-be60-ccc1fdec5953"
-      }
-    ],
-    "name": "dqe-d-lz",
-    "state": "Enabled",
-    "tenantId": "3a15904d-3fd9-4256-a753-beb05cdf0c6d",
-    "user": {
-      "name": "***",
-      "type": "servicePrincipal"
-    }
-  },
+Starting: Restore Locks
+==============================================================================
+Task         : Azure CLI
+Description  : Run Azure CLI commands against an Azure subscription in a PowerShell Core/Shell script when running on Linux agent or PowerShell/PowerShell Core/Batch script when running on Windows agent.
+Version      : 2.256.0
+Author       : Microsoft Corporation
+Help         : https://docs.microsoft.com/azure/devops/pipelines/tasks/deploy/azure-cli
+==============================================================================
+/usr/bin/az --version
+azure-cli                         2.74.0 *
+
+core                              2.74.0 *
+telemetry                          1.1.0
+
+Extensions:
+azure-devops                       1.0.2
+
+Dependencies:
+msal                              1.32.3
+azure-mgmt-resource               23.3.0
+WARNING: You have 2 update(s) available. Consider updating your CLI installation with 'az upgrade'
+
+Python location '/opt/az/bin/python3'
+Config directory '/home/vsts/.azure'
+Extensions directory '/opt/az/azcliextensions'
+
+Python (Linux) 3.12.10 (main, May 27 2025, 09:12:37) [GCC 13.3.0]
+
+Legal docs and information: aka.ms/AzureCliLegal
+
+
+Setting AZURE_CONFIG_DIR env variable to: /home/vsts/work/_temp/.azclitask
+Setting active cloud to: AzureCloud
+/usr/bin/az cloud set -n AzureCloud
+/usr/bin/az login --service-principal -u *** --password=*** --tenant 3a15904d-3fd9-4256-a753-beb05cdf0c6d --allow-no-subscriptions
+[
   {
     "cloudName": "AzureCloud",
     "homeTenantId": "3a15904d-3fd9-4256-a753-beb05cdf0c6d",
-    "id": "15d4702f-a4cf-4e5b-9ee3-38f46ff79e69",
-    "isDefault": false,
-    "managedByTenants": [],
-    "name": "ahsm-d-lz",
-    "state": "Enabled",
-    "tenantId": "3a15904d-3fd9-4256-a753-beb05cdf0c6d",
-    "user": {
-      "name": "***",
-      "type": "servicePrincipal"
-    }
-  }
-]
-/usr/bin/az account set --subscription eb940d7e-b120-4388-bbe7-4bee414e415b
-/usr/bin/bash /home/vsts/work/_temp/azureclitaskscript1752496071224.sh
-🔁 Reading lock data from artifact...
-cat: /home/vsts/work/1/locks_artifact/locks.json: No such file or directory
-/home/vsts/work/_temp/azureclitaskscript1752496071224.sh: line 9: [: : integer expression expected
-
-/usr/bin/az account clear
-Finishing: Restore Locks
+    "id": "b658ffad-30c7-4be6-881c-e3dc1f6520af",
+    "isDefault": true,
+    "managedByTenants": [
