--- a/share.yaml
+++ b/share.yaml
@@ -1,46 +1,80 @@
-- task: AzureCLI@2
-  displayName: "Restore Locks"
-  inputs:
-    azureSubscription: '${{ variables.ResourceGroupName }}'
-    scriptType: 'bash'
-    scriptLocation: 'inlineScript'
-    inlineScript: |
-      LOCK_FILE="$(Pipeline.Workspace)/locks_artifact/locks.json"
+ve Role Assignment
+/
+20250714.9
+Search
 
-      echo "🔁 Reading lock data from: $LOCK_FILE"
 
-      if [ ! -f "$LOCK_FILE" ]; then
-        echo "❌ Lock file not found: $LOCK_FILE"
-        exit 1
-      fi
 
-      LOCKS_JSON=$(cat "$LOCK_FILE")
 
-      echo "$LOCKS_JSON" | jq '.' || {
-        echo "❌ Invalid JSON content in lock file"
-        exit 1
-      }
 
-      if [ "$(echo "$LOCKS_JSON" | jq 'length')" -eq 0 ]; then
-        echo "✅ No locks to restore."
-        exit 0
-      fi
+Account manager for Luiz Viola
+GRD0001077
 
-      for row in $(echo "$LOCKS_JSON" | jq -r '.[] | @base64'); do
-        _jq() {
-          echo "${row}" | base64 --decode | jq -r "$1"
-        }
+Overview
 
-        LOCK_NAME=$(_jq '.name')
-        LOCK_LEVEL=$(_jq '.level')
-        LOCK_ID=$(_jq '.id')
-        LOCK_SCOPE=$(echo "$LOCK_ID" | sed 's|/providers/.*||')
+Boards
 
-        echo "Restoring lock: $LOCK_NAME at $LOCK_SCOPE"
-        az lock create \
-          --name "$LOCK_NAME" \
-          --lock-type "$LOCK_LEVEL" \
-          --scope "$LOCK_SCOPE"
+Repos
 
-        echo "✅ Lock '$LOCK_NAME' restored."
-      done
+Pipelines
+Pipelines
+Environments
+Releases
+Library
+Task groups
+Deployment groups
+BMC AMI Common Configuration
+New resource
+
+Test Plans
+
+Artifacts
+Project settings
+
+Jobs in run #20250714.9
+Remove Role Assignment
+Restore Locks
+
+View raw log
+Starting: Restore Locks
+==============================================================================
+Task         : Azure CLI
+Description  : Run Azure CLI commands against an Azure subscription in a PowerShell Core/Shell script when running on Linux agent or PowerShell/PowerShell Core/Batch script when running on Windows agent.
+Version      : 2.256.0
+Author       : Microsoft Corporation
+Help         : https://docs.microsoft.com/azure/devops/pipelines/tasks/deploy/azure-cli
+==============================================================================
+/usr/bin/az --version
+azure-cli                         2.74.0 *
+WARNING: You have 2 update(s) available. Consider updating your CLI installation with 'az upgrade'
+
+core                              2.74.0 *
+telemetry                          1.1.0
+
+Extensions:
+azure-devops                       1.0.2
+
+Dependencies:
+msal                              1.32.3
+azure-mgmt-resource               23.3.0
+
+Python location '/opt/az/bin/python3'
+Config directory '/home/vsts/.azure'
+Extensions directory '/opt/az/azcliextensions'
+
+Python (Linux) 3.12.10 (main, May 27 2025, 09:12:37) [GCC 13.3.0]
+
+Legal docs and information: aka.ms/AzureCliLegal
+
+
+Setting AZURE_CONFIG_DIR env variable to: /home/vsts/work/_temp/.azclitask
+Setting active cloud to: AzureCloud
+/usr/bin/az cloud set -n AzureCloud
+/usr/bin/az login --service-principal -u *** --password=*** --tenant 3a15904d-3fd9-4256-a753-beb05cdf0c6d --allow-no-subscriptions
+[
+  {
+    "cloudName": "AzureCloud",
+    "homeTenantId": "3a15904d-3fd9-4256-a753-beb05cdf0c6d",
+    "id": "b658ffad-30c7-4be6-881c-e3dc1f6520af",
+    "isDefault": true,
+    "managedByTenants": [
